--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
   <meta
     content="This is a description of the website here."
     name="description" />
-  <meta content="About - Apex Transformations" property="og:title" />
+  <meta content="About - SK-Aeros" property="og:title" />
   <meta
     content="This is a description of the website here."
     property="og:description" />
-  <meta content="About - Apex Transformations" property="twitter:title" />
+  <meta content="About - SK-Aeros" property="twitter:title" />
   <meta
     content="This is a description of the website here."
     property="twitter:description" />
@@ -152,9 +152,6 @@
         <div class="fullpage__left">
           <a href="index.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">Home</div>
-          </a>
-          <a href="about.html" class="fullpage__item w-inline-block">
-            <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">About</div>
           </a>
           <a href="projects.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b6" class="fullpage__item-text">Projects</div>
