--- a/index.html
+++ b/index.html
@@ -225,9 +225,6 @@
     <div class="fullpage__wrapper">
       <div class="container is--fullpage">
         <div class="fullpage__left">
-          <a href="index.html" class="fullpage__item w-inline-block">
-            <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">Home</div>
-          </a>
           <a href="about.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">About</div>
           </a>
@@ -526,9 +523,11 @@
               stroke-width="1"></path>
           </svg>
         </div>
-        <p class="paragraph__sarif">To my mind, the greatest reward for any renovation project is being able to
-          experience the transformation from beginning to end. I enjoy getting to see how a renovation can go from an
-          idea to a reality and lead to an elevated mood and heightened productivity.</p>
+        <p class="paragraph__sarif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis perspiciatis fuga cumque provident? Illum eligendi adipisci rerum blanditiis autem voluptatum neque ullam abi.</p>
+        <br/>
+        <p class="paragraph__sarif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis perspiciatis fuga cumque provident? Illum eligendi adipisci rerum blanditiis autem voluptatum neque ullam abi.</p>
+        <br/>
+        <p class="paragraph__sarif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis perspiciatis fuga cumque provident? Illum eligendi adipisci rerum blanditiis autem voluptatum neque ullam abi.</p>
       </div>
     </section>
 
