--- a/projects.html
+++ b/projects.html
@@ -9,13 +9,13 @@
   <meta
     content="View Apex Transformations portfolio of award-winning modern custom homes &amp; workplaces renovations in Toronto."
     name="description" />
-  <meta content="Projects - Apex Transformations" property="og:title" />
+  <meta content="Projects - SK-Aeros" property="og:title" />
   <meta
-    content="View Apex Transformations portfolio of award-winning modern custom homes &amp; workplaces renovations in Toronto."
+    content="View SK-Aeros portfolio of award-winning modern custom homes &amp; workplaces renovations in Toronto."
     property="og:description" />
-  <meta content="Projects - Apex Transformations" property="twitter:title" />
+  <meta content="Projects - SK-Aeros" property="twitter:title" />
   <meta
-    content="View Apex Transformations portfolio of award-winning modern custom homes &amp; workplaces renovations in Toronto."
+    content="View SK-Aeros portfolio of award-winning modern custom homes &amp; workplaces renovations in Toronto."
     property="twitter:description" />
   <meta property="og:type" content="website" />
   <meta content="summary_large_image" name="twitter:card" />
@@ -24,7 +24,6 @@
   <link
     href="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/css/apextransformations.webflow.3da7ffc30.min.css"
     rel="stylesheet" type="text/css" />
-  <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link
@@ -151,15 +150,18 @@
   <div class="fullpage-menu">
     <div class="fullpage__wrapper">
       <div class="container is--fullpage">
-        <div class="fullpage__left"><a href="about.html" class="fullpage__item w-inline-block">
+        <div class="fullpage__left">
+          <a href="about.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">About</div>
-          </a><a href="projects.html" aria-current="page" class="fullpage__item w-inline-block w--current">
-            <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b6" class="fullpage__item-text">Projects</div>
-          </a><a href="services.html" class="fullpage__item w-inline-block">
+          </a>
+          <a href="services.html" class="fullpage__item w-inline-block">
             <div data-w-id="178ac211-29d6-5e20-fa20-417ebf2a670e" class="fullpage__item-text">SERVICES</div>
-          </a><a href="how-it-works.html" class="fullpage__item w-inline-block">
+          </a>
+          <a href="how-it-works.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b9" class="fullpage__item-text">How it works</div>
-          </a></div>
+          </a>
+        </div>
+
         <div class="fullpage__right">
           <div class="fullpage__social">
             <div class="div-hide">
@@ -295,16 +297,16 @@
                 data-w-id="4bfcaf1f-df29-9fd8-40e3-c9c7dfd29256"
                 style="background-image:url(https://www.apextransformations.ca/&quot;https://uploads-ssl.webflow.com/61ec1a21c49ca6cd322eb568/61f8b7e2582d7384b10b57db_School-renovation-enterance-.jpg&quot;)"
                 href="projects/canada-academy-of-music-and-arts.html" class="projects_item w-inline-block">
-                <h2 class="heading">Canada academy of music and arts</h2>
+                <h2 class="heading">SK-Aeros PH</h2>
                 <div class="image-cover"></div>
                 <div style="width:100%;height:0%" class="interactive-cover"></div>
                 <div class="div-hide positioned">
                   <h3
                     style="-webkit-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                    class="heading-2 is--1">Office </h3>
+                    class="heading-2 is--1">SK-aeros </h3>
                   <h3
                     style="-webkit-transform:translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                    class="heading-2 is--2">Office </h3>
+                    class="heading-2 is--2">SK-aeros </h3>
                 </div>
               </a></div>
           </div>
@@ -314,7 +316,7 @@
     <aside class="section">
       <div class="container is--apply-cta">
         <div data-w-id="e22401f9-9db9-2be4-ac1f-f7c44e7ff868" class="scroll-section-1">
-          <div class="super-text-1 two">Book a call</div>
+          <div class="super-text-1 two">SK-Aeros PH</div>
         </div>
         <div class="apply-cta">
           <div data-w-id="e0f261ca-1d4d-7fc6-d335-951b51514d44" class="text-wrap-2">
@@ -339,8 +341,7 @@
               <h1 class="ma-5-ap">Y</h1>
             </div>
           </div>
-          <p class="main-p is-apply">Ready to see how we can help you create an incredible new space? Get in touch to
-            request a quote today.</p><a data-w-id="51de23d6-ef14-2f1d-ed20-5c2c8f042b62" href="request-a-quote.html"
+          <p class="main-p is-apply">Ready to get know of SK-Aeros PH? reach us now!</p><a data-w-id="51de23d6-ef14-2f1d-ed20-5c2c8f042b62" href="request-a-quote.html"
             class="colored-btn w-inline-block">
             <div class="btn-cover-main no-border"></div>
             <div class="btn-cover"></div>
@@ -349,28 +350,36 @@
         </div>
       </div>
     </aside>
+
+
     <footer class="section is--footer">
       <div class="container is--footer">
         <div class="footer">
           <div class="footer-left">
-            <div class="footer-col">
+            <!-- <div class="footer-col">
               <h2 class="footer-heading">Connect</h2>
-              <div class="footer-list"><a href="index.html" class="footer__link-item mb">Home</a><a href="about.html"
-                  class="footer__link-item mb">About</a><a href="services.html"
-                  class="footer__link-item mb">Services</a><a href="how-it-works.html" class="footer__link-item">How it
-                  works</a></div>
-            </div>
+              <div class="footer-list">
+                <a href="index.html" aria-current="page" class="footer__link-item mb w--current">Home</a>
+                <a href="about.html" class="footer__link-item mb">About</a>
+                <a href="services.html" class="footer__link-item mb">Services</a>
+                <a href="how-it-works.html" class="footer__link-item">How it works</a>
+              </div>
+            </div> -->
+
+
             <div class="footer-col">
               <h2 class="footer-heading">Contact</h2>
-              <div class="footer-list"><a href="projects.html#" class="footer__link-item mb">7250 Keele
-                  St.<br />Concord, ON L4K 1Z8<br />Units #36 and #73<br /></a><a href="tel:+1(145)2552544"
-                  class="footer__link-item mb">Telephone: 905-266-2692<br /></a><a href="tel:+1(145)2552544"
-                  class="footer__link-item mb">Toll free: 1-866-209-9666<br /></a></div>
+              <div class="footer-list"><a href="index.html#" class="footer__link-item mb">Manila<br />Cebu,
+                  ON L4K 1Z8<br />Block 6<br /></a><a href="tel:+1(145)2552544"
+                  class="footer__link-item mb">Telephone: 000-111-2222<br /></a><a href="tel:+1(145)2552544"
+                  class="footer__link-item mb">Email: SK-aeros@skaeros.com<br /></a></div>
             </div>
           </div>
+
+
           <div class="footer-right">
             <div class="div-block-12">
-              <h2 class="footer-heading">Join Our Newsletter</h2>
+              <h2 class="footer-heading">Subscribe to our Newsletter</h2>
               <div class="footer-form-wrapper">
                 <p class="footer__newsletter-p">Subscribe to our mailing list to keep up to date on the latest
                   newsletters and videos.</p>
@@ -400,16 +409,18 @@
         </div>
         <div class="footer-bottom">
           <div class="div-block-11">
-            <div class="footer-bottom__left">@2022 - Apex Transformations</div>
+            <div class="footer-bottom__left">@2022 - SK-Aeros inc.</div>
           </div>
-          <div class="div-block-11">
+          <!-- <div class="div-block-11">
             <div class="footer-bottom__right">Website by <a href="http://ebda.io" target="_blank" class="link">ebda</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </footer>
   </div>
+
+
   <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
