--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
       <div class="container is--about">
         <div class="about">
           <div class="colored-headings is--padding">
-           
             <h2 data-w-id="cb976bcd-8078-3a59-fbe0-bcf4440d94e8"
               style="opacity:0;-webkit-transform:translate3d(10%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(10%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(10%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(10%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
               class="heading-colored">Sk aero</h2>
@@ -345,10 +344,10 @@
         <div class="footer">
           <div class="footer-left">
             <div class="footer-col">
-              <h2 class="footer-heading">Reach us through:</h2>
+              <h2 class="footer-heading">More about us</h2>
               <div class="footer-list">
                 <a href="index.html#" class="footer__link-item mb">Manila<br />Philippines,
-                  ON Bagdad 2nd floor<br />Block 69<br />
+                 Bagdad 2nd floor<br />Block 69<br />
                 </a>
                 <a class="footer__link-item mb">Phone #:
                   +639123456789<br />
@@ -402,13 +401,17 @@
     </footer>
   </div>
 
+  <!--!  Scripts and jQuery -->
   <script src="scripts/index.js"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61ec1a21c49ca64c3e2eb550"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
   <script src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/js/webflow.0fc5f533b.js"
-    type="text/javascript"></script>
+  type="text/javascript">
+</script>
   <script>
+
     $('.nav__menu').on('click', function () {
       $('body, html').toggleClass('overflow-h');
     });
@@ -419,9 +422,9 @@
   </script>
 
   <script>
-    $('.truncated').each(function () {     //you can apply it to any element, div or button or id
-      var truncated = $(this).text().substr(0, 130);     //Change 100 to a number of characters you want to show
-      $(this).text(truncated + (truncated.length < 130 ? '' : '...')); //And here as well
+    $('.truncated').each(function () {   
+      var truncated = $(this).text().substr(0, 130);    
+      $(this).text(truncated + (truncated.length < 130 ? '' : '...'));
     });
   </script>
 </body>
