--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="styles/about/secondary.css">
   <link rel="stylesheet" href="styles//about/media.css">
 
+  
   <!--!  Favicon  -->
   <link href="assets/favicon/favicon-desktop.png" rel="shortcut icon" type="image/x-icon" />
   <link href="assets/favicon/favicon-mobile.png" rel="apple-touch-icon" />
@@ -594,7 +595,9 @@
   <script src="scripts/index.js"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61ec1a21c49ca64c3e2eb550"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+  
   <script src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/js/webflow.0fc5f533b.js"
     type="text/javascript"></script>
   <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
@@ -614,6 +617,7 @@
       $(this).text(truncated + (truncated.length < 130 ? '' : '...'));
     });
   </script>
+  
   <script>
     var Webflow = Webflow || [];
     Webflow.push(function () {
