--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
   <!--!  Favicon  -->
-  <link href="assets/favicon/sk-favicon.jpg" rel="shortcut icon" type="image/x-icon" />
+  <link href="assets/sk-aero-logo.png" rel="shortcut icon" type="image/x-icon" />
 
   <!--!  Assets  -->
   <meta
@@ -103,13 +103,13 @@
   </div>
 
   <!--!  Loader  -->
-  <!-- <div class="preloader">
+  <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div> -->
+  </div>
 
   <div style="opacity: 0" class="parent">
     <nav data-w-id="e2d619f0-3929-f548-7fec-fabd0163f174" class="navbar">
@@ -119,9 +119,13 @@
           <div class="nav__logo">
             <a href="index.html" aria-current="page" class="logo-link w-inline-block w--current">
               <div class="nav__logo-svg w-embed">
-                <img id="Layer_1" src="assets/images/sk-logo.png" alt="" />
+                <img id="Layer_1" src="assets/sk-aero-logo.png" alt="" />
               </div>
             </a>
+          </div>
+
+          <div class="nav__cta">
+            <p class="heading-colored main-p">ENGLISH</p>
           </div>
 
           <div data-w-id="e2d619f0-3929-f548-7fec-fabd0163f179" class="nav__menu">
@@ -132,12 +136,6 @@
               data-default-duration="2.4791666666666665" data-duration="0" data-ix2-initial-state="0"></div>
           </div>
 
-          <div class="nav__cta">
-            <a data-w-id="80bb98e2-9c22-bed1-5063-efd275250aaa" href="#" class="cta-main w-inline-block">
-              <div class="btn-cover-small"></div>
-              <div class="nav__cta-text">request a quote</div>
-            </a>
-          </div>
         </div>
       </div>
     </nav>
@@ -145,21 +143,21 @@
     <!--!  Intro hero container  -->
     <header class="section">
       <div class="container is--hero">
+        <div class="hero-heading">
+          <h1 class="primary-heading">
+            welcome to<br /><em class="heading-colored">SK-AERO Builders</em>
+          </h1>
+        </div>
+
         <div class="hero">
           <div class="hero__right">
-            <div class="hero-heading">
-              <h1 class="primary-heading">
-                welcome to<br /><em class="heading-colored">SK-AERO Builders</em>
-              </h1>
-            </div>
             <div class="hero-video-wrapper">
               <div data-autoplay="true" data-loop="true" data-wf-ignore="true" id="video"
                 class="hero-video w-background-video w-background-video-atom">
                 <video id="f300897a-daa8-04f6-ee26-ae5ab4465742-video" autoplay="" loop="" style="
                       background-image: url('https://uploads-ssl.webflow.com/616c480f8e454e3df261a7ab/61d72fa3e3c3b671861d9a19_apex transformations video-poster-00001.jpg');
                     " muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-                  <source src="./assets/videos/index/sample-vid1.mp4" data-wf-ignore="true" />
-                  <source src="./assets/videos/index/sample-vid2.webm" data-wf-ignore="true" />
+                  <source src="assets/videos/index/sample-vid1.mp4" data-wf-ignore="true" />
                 </video>
                 <div class="video_overlay"></div>
               </div>
@@ -174,9 +172,11 @@
       <div class="container">
         <div class="sticky-parent">
           <div class="tab-content">
-            <div class="cards-parent mt-none"><img
+            <div class="cards-parent mt-none">
+              <img
                 src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca699cf2eb625_apex%20home%20renovation.svg"
-                loading="lazy" alt="Illustration of Luxurious beautiful modern living room" class="image-11" /></div>
+                loading="lazy" alt="Illustration of Luxurious beautiful modern living room" class="image-11" />
+            </div>
           </div>
           <div class="sticky-box about">
             <h2 class="why-us__heading"><span class="heading-colored">SK AERO Builders</span></h2>
@@ -346,7 +346,8 @@
               services at fair and market competitive prices.
               <br />
               <br />
-              We maintain the best levels of integrity. honesty, professionalism <br /> and fairness to our stakeholders.
+              We maintain the best levels of integrity. honesty, professionalism <br /> and fairness to our
+              stakeholders.
             </p>
           </div>
           <div data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea097" class="cta-left">
@@ -368,14 +369,9 @@
 
     <!--!  Projects hero section  -->
     <section class="section projects">
-        <div
-          data-w-id="1c687701-b616-479c-1acd-a33df98627b9"
-          class="scroll-section-imgs"
-        >
-          <div class="overflow-hidden-div mb">
-            <h2
-              data-w-id="842bcb5f-a778-e049-1029-40612678455d"
-              style="
+      <div data-w-id="1c687701-b616-479c-1acd-a33df98627b9" class="scroll-section-imgs">
+        <div class="overflow-hidden-div mb">
+          <h2 data-w-id="842bcb5f-a778-e049-1029-40612678455d" style="
                 -webkit-transform: translate3d(0, -100%, 0) scale3d(1, 1, 1)
                   rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                 -moz-transform: translate3d(0, -100%, 0) scale3d(1, 1, 1)
@@ -384,122 +380,92 @@
                   rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                 transform: translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
-              "
-              class="project__heading"
-            >
-              Projects
-            </h2>
-          </div>
-
-          <div class="project-scroll">
-            <div class="project-scroll-image">
-              <img
-                src="assets/images/index/home-sample1.jpg"
-                loading="lazy"
-                sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-                alt="Kitchen an elegant one"
-                class="project__img"
-              />
-            </div>
-
-            <div class="project-scroll-image">
-              <img
-                src="assets/images/index/sk-building.png"
-                loading="lazy"
-                sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-                alt="Beautiful sala or living room"
-                class="project__img"
-              />
-            </div>
-
-            <div class="project-scroll-image">
-              <img
-                src="assets//images/index/home-sample2.jpg"
-                loading="lazy"
-                sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-                alt="Luxury bathroom with black marble floor and white marble wall"
-                class="project__img"
-              />
-            </div>
-          </div>
+              " class="project__heading">
+            Projects
+          </h2>
         </div>
 
-        <a
-          data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29"
-          href="#"
-          class="outlined-cta projects w-inline-block"
-        >
-          <div class="btn-cover-outlined"></div>
-          <div class="outlined-cta-text">View Projects</div>
-        </a>
-      </section>
+        <div class="project-scroll">
+          <div class="project-scroll-image">
+            <img src="assets/images/index/home-sample1.jpg" loading="lazy"
+              sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw" alt="Kitchen an elegant one"
+              class="project__img" />
+          </div>
 
-      <section class="section">
-        <div class="container is--cta">
-          <div class="cta">
-            <div data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea097" class="cta-left"><img
-                src="assets/images/index/renovations.jpeg"
-                loading="lazy"
-                style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0)"
-                sizes="(max-width: 479px) 95vw, (max-width: 767px) 94vw, 37vw"
-                alt="Living room with decorative glass wall" class="cta-image" /></div>
-            <div class="cta-right pb">
-              <div data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea09a" class="colored-headings">
-                <h2
-                  style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
-                  class="heading-white">Have projects in mind?</h2>
-                <h2
-                  style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
-                  class="heading-colored s--1">Wanna talk?</h2>
-                <h2
-                  style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
-                  class="heading-colored s--2">Come reach us!</h2>
-              </div>
-              <p class="main-p is--padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis minus incidunt eius earum rerum harum pariatur? Ab aut placeat eligendi voluptate suscipit labore veniam esse, adipisci saepe! Non, ullam magnam.</p><a
-                data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea0a3" href="#"
-                class="cta-main w-inline-block">
-                <div
-                  style="-webkit-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                  class="btn-cover-small"></div>
-                <div style="color:rgb(0,0,0)" class="nav__cta-text">Request a quote</div>
-              </a>
-            </div>
+          <div class="project-scroll-image">
+            <img src="assets/images/index/sk-building.png" loading="lazy"
+              sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw" alt="Beautiful sala or living room"
+              class="project__img" />
+          </div>
+
+          <div class="project-scroll-image">
+            <img src="assets//images/index/home-sample2.jpg" loading="lazy"
+              sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+              alt="Luxury bathroom with black marble floor and white marble wall" class="project__img" />
           </div>
         </div>
-      </section>
+      </div>
+
+      <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="#" class="outlined-cta projects w-inline-block">
+        <div class="btn-cover-outlined"></div>
+        <div class="outlined-cta-text">View Projects</div>
+      </a>
+    </section>
+
+    <section class="section">
+      <div class="container is--cta">
+        <div class="cta">
+          <div data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea097" class="cta-left"><img
+              src="assets/images/index/renovations.jpeg" loading="lazy"
+              style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0)"
+              sizes="(max-width: 479px) 95vw, (max-width: 767px) 94vw, 37vw"
+              alt="Living room with decorative glass wall" class="cta-image" /></div>
+          <div class="cta-right pb">
+            <div data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea09a" class="colored-headings">
+              <h2
+                style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
+                class="heading-white">Have projects in mind?</h2>
+              <h2
+                style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
+                class="heading-colored s--1">Wanna talk?</h2>
+              <h2
+                style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
+                class="heading-colored s--2">Come reach us!</h2>
+            </div>
+            <p class="main-p is--padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis minus
+              incidunt eius earum rerum harum pariatur? Ab aut placeat eligendi voluptate suscipit labore veniam esse,
+              adipisci saepe! Non, ullam magnam.</p><a data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea0a3" href="#"
+              class="cta-main w-inline-block">
+              <div
+                style="-webkit-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                class="btn-cover-small"></div>
+              <div style="color:rgb(0,0,0)" class="nav__cta-text">Request a quote</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
     <!--!  Quotes  -->
     <section class="section">
-        <div class="container is--quote">
-          <div class="quote-embd w-embed">
-            <?xml version="1.0" encoding="UTF-8"?>
-            <svg
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-              width=""
-              height=""
-              viewBox="0 0 85.9 73.168"
-            >
-              <path
-                id="_"
-                data-name="“"
-                d="M55.35,65.85Q49.8,59.7,49.8,46.95T57.15,21.6A64.942,64.942,0,0,1,78.3,0l4.5,5.7Q63.6,18.3,63.6,32.4q0,5.7,6.9,7.5,14.4,3.3,14.4,16.2A15.19,15.19,0,0,1,80.25,67.5a16.539,16.539,0,0,1-12,4.5Q60.9,72,55.35,65.85Zm-49.8,0Q0,59.7,0,46.95T7.35,21.6A64.934,64.934,0,0,1,28.5,0L33,5.7Q13.8,18.3,13.8,32.4q0,5.7,6.9,7.5,14.4,3.3,14.4,16.2a15.187,15.187,0,0,1-4.65,11.4,16.537,16.537,0,0,1-12,4.5Q11.1,72,5.55,65.85Z"
-                transform="translate(0.5 0.668)"
-                fill="rgba(255,255,255,0)"
-                stroke="currentColor"
-                stroke-miterlimit="10"
-                stroke-width="1"
-              ></path>
-            </svg>
-          </div>
-          <p class="paragraph__sarif">One team, One goal .</p>
-          <br />
-          <p class="paragraph__sarif">We do what we do best !</p>
-          <br />
-          <p class="paragraph__sarif">When there's a will, there is a way !</p>
+      <div class="container is--quote">
+        <div class="quote-embd w-embed">
+          <?xml version="1.0" encoding="UTF-8"?>
+          <svg width="100%" xmlns="http://www.w3.org/2000/svg" width="" height="" viewBox="0 0 85.9 73.168">
+            <path id="_" data-name="“"
+              d="M55.35,65.85Q49.8,59.7,49.8,46.95T57.15,21.6A64.942,64.942,0,0,1,78.3,0l4.5,5.7Q63.6,18.3,63.6,32.4q0,5.7,6.9,7.5,14.4,3.3,14.4,16.2A15.19,15.19,0,0,1,80.25,67.5a16.539,16.539,0,0,1-12,4.5Q60.9,72,55.35,65.85Zm-49.8,0Q0,59.7,0,46.95T7.35,21.6A64.934,64.934,0,0,1,28.5,0L33,5.7Q13.8,18.3,13.8,32.4q0,5.7,6.9,7.5,14.4,3.3,14.4,16.2a15.187,15.187,0,0,1-4.65,11.4,16.537,16.537,0,0,1-12,4.5Q11.1,72,5.55,65.85Z"
+              transform="translate(0.5 0.668)" fill="rgba(255,255,255,0)" stroke="currentColor" stroke-miterlimit="10"
+              stroke-width="1"></path>
+          </svg>
         </div>
-      </section>
+        <p class="paragraph__sarif">One team, One goal .</p>
+        <br />
+        <p class="paragraph__sarif">We do what we do best !</p>
+        <br />
+        <p class="paragraph__sarif">When there's a will, there is a way !</p>
+      </div>
+    </section>
 
     <!--!  Footer  -->
     <footer class="section is--footer">
