--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
     <div class="fullpage__wrapper">
       <div class="container is--fullpage">
         <div class="fullpage__left">
-          <a href="#" class="fullpage__item w-inline-block">
+          <a href="about.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">
               About
             </div>
           </a>
-          <a href="#" class="fullpage__item w-inline-block">
+          <a href="how-it-works.html" class="fullpage__item w-inline-block">
             <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b6" class="fullpage__item-text">
               Projects
             </div>
           </a>
-          <a href="#" class="fullpage__item w-inline-block">
+          <a href="services.html" class="fullpage__item w-inline-block">
             <div data-w-id="178ac211-29d6-5e20-fa20-417ebf2a670e" class="fullpage__item-text">
               SERVICES
             </div>
@@ -100,6 +100,7 @@
         </div>
       </div>
     </div>
+
   </div>
 
   <!--!  Loader  -->
@@ -124,10 +125,6 @@
             </a>
           </div>
 
-          <div class="nav__cta">
-            <p class="heading-colored main-p">ENGLISH</p>
-          </div>
-
           <div data-w-id="e2d619f0-3929-f548-7fec-fabd0163f179" class="nav__menu">
             <div data-is-ix2-target="1" class="nav__menu-lottie" data-w-id="e2d619f0-3929-f548-7fec-fabd0163f17a"
               data-animation-type="lottie"
@@ -135,7 +132,6 @@
               data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg"
               data-default-duration="2.4791666666666665" data-duration="0" data-ix2-initial-state="0"></div>
           </div>
-
         </div>
       </div>
     </nav>
