Modified headings and title

--- a/benefits.html
+++ b/benefits.html
@@ -136,139 +136,12 @@
       </style>
     </div>
   </div>
-  <div class="fullpage-menu">
-    <div class="fullpage__wrapper">
-      <div class="container is--fullpage">
-        <div class="fullpage__left"><a href="about.html" class="fullpage__item w-inline-block">
-            <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b3" class="fullpage__item-text">About</div>
-          </a><a href="projects.html" class="fullpage__item w-inline-block">
-            <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b6" class="fullpage__item-text">Projects</div>
-          </a><a href="services.html" class="fullpage__item w-inline-block">
-            <div data-w-id="178ac211-29d6-5e20-fa20-417ebf2a670e" class="fullpage__item-text">SERVICES</div>
-          </a><a href="how-it-works.html" class="fullpage__item w-inline-block">
-            <div data-w-id="2fe14872-d564-077b-61eb-fe0a2f6878b9" class="fullpage__item-text">How it works</div>
-          </a></div>
-        <div class="fullpage__right">
-          <div class="fullpage__social">
-            <div class="div-hide">
-              <div class="sm-menu-txt">Stay in touch</div>
-            </div>
-            <div class="fullpage__social-wrapper">
-              <div class="div-hide"><a href="http://instagram.com/apextransformations/"
-                  class="fullpage__scoial-icon one">Instagram</a></div>
-              <div class="div-hide"><a href="https://www.facebook.com/apextransformations.ca/"
-                  class="fullpage__scoial-icon two">Facebook</a></div>
-              <div class="div-hide"><a href="https://twitter.com/apextransforms_"
-                  class="fullpage__scoial-icon three">Twitter</a></div>
-              <div class="div-hide"><a href="benefits.html#" class="fullpage__scoial-icon three no-margin">youtube</a>
-              </div>
-            </div>
-          </div>
-          <div class="fullpage__list"><a href="benefits.html" aria-current="page"
-              class="fullpage__item w-inline-block w--current">
-              <div class="fullpage__item-text-2 one">Benefits</div>
-            </a><a href="blogs.html" class="fullpage__item w-inline-block">
-              <div class="fullpage__item-text-2 two">Blogs</div>
-            </a><a href="contact.html" class="fullpage__item w-inline-block">
-              <div class="fullpage__item-text-2 three">contact</div>
-            </a></div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+
   <div style="opacity:0" class="parent">
-    <nav data-w-id="e2d619f0-3929-f548-7fec-fabd0163f174" class="navbar">
-      <div class="container is--nav">
-        <div class="nav">
-          <div class="nav__logo"><a href="index.html" class="logo-link w-inline-block">
-              <div class="nav__logo-svg w-embed"><svg width="100%" id="Layer_1" data-name="Layer 1"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 381.18 211.29">
-                  <defs>
-                    <style>
-                      .cls-1,
-                      .cls-3 {
-                        fill: none;
-                      }
+    
 
-                      .cls-1 {
-                        stroke: currentColor;
-                        stroke-miterlimit: 10;
-                        stroke-width: 7px;
-                      }
 
-                      .cls-2 {
-                        fill: currentColor;
-                      }
-                    </style>
-                  </defs>
-                  <path class="cls-1" d="M425.2,473.33" transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M241.89,519.68V502.44h-7.28v-2.57H252v2.57H244.7v17.24Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M262.59,519.68V499.87h5.8a6.85,6.85,0,0,1,4.63,1.41,5,5,0,0,1,1.63,4,5.13,5.13,0,0,1-.89,3.14,5.4,5.4,0,0,1-2.82,1.79,4.39,4.39,0,0,1,.94.71,10.91,10.91,0,0,1,1.13,1.5l4.81,7.25H274.4l-3.4-5.2a11.61,11.61,0,0,0-2.47-3,3.82,3.82,0,0,0-2.25-.65h-.85v8.85Zm2.84-11.23h2.35a4.81,4.81,0,0,0,3-.77,2.76,2.76,0,0,0,1-2.33,2.81,2.81,0,0,0-.93-2.35,5,5,0,0,0-3-.73h-2.35Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M284.57,519.68l8.58-19.81h2.07l8.7,19.81H301l-2.55-5.84H290l-2.52,5.84Zm6.53-8.39h6.18l-3.13-7.13Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M313.73,519.68V499.87h2.46l13,15.37V499.87h2.82v19.81h-2.52l-13-15.4v15.4Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M343.59,518.13v-3.74a10,10,0,0,0,2.57,2.23,5.29,5.29,0,0,0,2.61.68,3.57,3.57,0,0,0,2.32-.69,2.26,2.26,0,0,0,.85-1.86,2.66,2.66,0,0,0-.57-1.69,12.35,12.35,0,0,0-2.74-2.11,17.57,17.57,0,0,1-4.22-3.35,4.72,4.72,0,0,1-.85-2.83,4.87,4.87,0,0,1,1.63-3.79,6,6,0,0,1,4.22-1.48,7.86,7.86,0,0,1,2.25.33,9.18,9.18,0,0,1,2.25,1v3.21a10.71,10.71,0,0,0-2.41-1.52,5.47,5.47,0,0,0-2.21-.48,3.42,3.42,0,0,0-2.17.66,2.07,2.07,0,0,0-.84,1.7q0,1.47,3.49,3.65l.43.25a12.1,12.1,0,0,1,3.72,3.13,6,6,0,0,1,.88,3.35,4.83,4.83,0,0,1-1.64,3.74A6,6,0,0,1,349,520a8.76,8.76,0,0,1-2.89-.45A8.28,8.28,0,0,1,343.59,518.13Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M366.3,519.68V499.87h11.27v2.52H369.1v5.86h8.21v2.55H369.1v8.88Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M388.13,509.69a9.61,9.61,0,0,1,.81-3.85,10.11,10.11,0,0,1,2.29-3.3,10.54,10.54,0,0,1,3.43-2.22,10.68,10.68,0,0,1,4-.76,10.8,10.8,0,0,1,4.08.77,10.11,10.11,0,0,1,6.51,9.55A10,10,0,0,1,406.2,517a10.64,10.64,0,0,1-3.45,2.23,10.83,10.83,0,0,1-4.07.76,10.64,10.64,0,0,1-4-.78,10.13,10.13,0,0,1-6.51-9.56Zm3,.1a7.51,7.51,0,0,0,2.2,5.33,7.22,7.22,0,0,0,2.43,1.63,7.74,7.74,0,0,0,5.83,0,7.57,7.57,0,0,0,4.09-9.84,7.92,7.92,0,0,0-1.67-2.48,7.35,7.35,0,0,0-2.44-1.66,7.5,7.5,0,0,0-2.9-.57,7.28,7.28,0,0,0-2.86.58,8,8,0,0,0-2.48,1.65,7.08,7.08,0,0,0-1.63,2.43A7.55,7.55,0,0,0,391.14,509.79Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M420.71,519.68V499.87h5.8a6.84,6.84,0,0,1,4.63,1.41,5.84,5.84,0,0,1,.74,7.15,5.32,5.32,0,0,1-2.82,1.79,4.39,4.39,0,0,1,.94.71,10.91,10.91,0,0,1,1.13,1.5l4.82,7.25h-3.43l-3.4-5.2a11.41,11.41,0,0,0-2.47-3,3.82,3.82,0,0,0-2.25-.65h-.85v8.85Zm2.84-11.23h2.36a4.76,4.76,0,0,0,3-.77,2.76,2.76,0,0,0,1-2.33,2.81,2.81,0,0,0-.94-2.35,5,5,0,0,0-3-.73h-2.36Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M445.46,519.68V499.87h2.46l7.12,8.32,7.14-8.32h2.46v19.81H461.9V504.21l-6.86,8-6.84-8v15.47Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M474.45,519.68,483,499.87h2.07l8.7,19.81h-2.93l-2.55-5.84h-8.44l-2.52,5.84Zm6.53-8.39h6.18L484,504.16Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M506.85,519.68V502.44h-7.28v-2.57h17.37v2.57h-7.27v17.24Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M527.68,519.68V499.87h2.83v19.81Z" transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M542.09,509.69a9.61,9.61,0,0,1,.81-3.85,10.11,10.11,0,0,1,2.29-3.3,10.54,10.54,0,0,1,3.43-2.22,10.68,10.68,0,0,1,4-.76,10.8,10.8,0,0,1,4.08.77,10.11,10.11,0,0,1,6.51,9.55,10,10,0,0,1-3.07,7.16,10.64,10.64,0,0,1-3.45,2.23,11.09,11.09,0,0,1-8.12,0,10.4,10.4,0,0,1-3.4-2.21,9.93,9.93,0,0,1-3.1-7.35Zm3,.1a7.51,7.51,0,0,0,2.2,5.33,7.22,7.22,0,0,0,2.43,1.63,7.74,7.74,0,0,0,5.83,0,7.57,7.57,0,0,0,4.09-9.84,7.92,7.92,0,0,0-1.67-2.48,7.35,7.35,0,0,0-2.44-1.66,7.5,7.5,0,0,0-2.9-.57,7.28,7.28,0,0,0-2.86.58,7.85,7.85,0,0,0-2.48,1.65,7.08,7.08,0,0,0-1.63,2.43A7.55,7.55,0,0,0,545.1,509.79Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M574.71,519.68V499.87h2.46l13,15.37V499.87H593v19.81h-2.52l-13-15.4v15.4Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M604.57,518.13v-3.74a10.19,10.19,0,0,0,2.57,2.23,5.35,5.35,0,0,0,2.61.68,3.61,3.61,0,0,0,2.33-.69,2.28,2.28,0,0,0,.84-1.86,2.66,2.66,0,0,0-.57-1.69,12.1,12.1,0,0,0-2.74-2.11,17.24,17.24,0,0,1-4.21-3.35,4.72,4.72,0,0,1-.86-2.83,4.88,4.88,0,0,1,1.64-3.79,6,6,0,0,1,4.21-1.48,7.87,7.87,0,0,1,2.26.33,9.12,9.12,0,0,1,2.24,1v3.21a10.9,10.9,0,0,0-2.4-1.52,5.54,5.54,0,0,0-2.21-.48,3.43,3.43,0,0,0-2.18.66,2.07,2.07,0,0,0-.84,1.7q0,1.47,3.5,3.65l.42.25a12.3,12.3,0,0,1,3.73,3.13,6,6,0,0,1,.87,3.35,4.8,4.8,0,0,1-1.64,3.74,6,6,0,0,1-4.2,1.48,8.72,8.72,0,0,1-2.89-.45A8.21,8.21,0,0,1,604.57,518.13Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-3" d="M422.27,382.59" transform="translate(-234.61 -308.74)" />
-                  <path class="cls-1" d="M431.07,397" transform="translate(-234.61 -308.74)" />
-                  <line class="cls-1" x1="217.37" y1="139.66" x2="180.48" y2="139.66" />
-                  <polyline class="cls-1" points="220.13 116.81 180.49 116.81 180.49 162.52 218.98 162.52" />
-                  <polygon class="cls-2"
-                    points="288.37 165.11 296.21 165.11 187.66 0.96 81.88 165.11 117.42 165.11 200.31 34.05 288.37 165.11" />
-                  <polygon class="cls-2" points="246.89 165.4 256.05 165.4 299.3 107.89 294.79 102.19 246.89 165.4" />
-                  <path class="cls-1" d="M431.07,308.52" transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2"
-                    d="M480.5,379.26c.16-.42.33-.81.49-1.15,3.68-7.5,7.1-19.67,3-35.57-7.13-27.81-39.58-36.12-52.94-33.27l3.85,6.89a42.06,42.06,0,0,1,37.92,19.48c14.26,22.1-.43,44-3.56,48.24s-10.7,10.34-19.25,11.94H398.94l-2.61,6.85h49.42a31.72,31.72,0,0,0,15.43-3.39A44.59,44.59,0,0,0,480.5,379.26Z"
-                    transform="translate(-234.61 -308.74)" />
-                  <path class="cls-2" d="M425.2,335.5" transform="translate(-234.61 -308.74)" />
-                </svg></div>
-            </a></div>
-          <div data-w-id="e2d619f0-3929-f548-7fec-fabd0163f179" class="nav__menu">
-            <div data-is-ix2-target="1" class="nav__menu-lottie" data-w-id="e2d619f0-3929-f548-7fec-fabd0163f17a"
-              data-animation-type="lottie"
-              data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca686572eb591_menu.json"
-              data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg"
-              data-default-duration="2.4791666666666665" data-duration="0" data-ix2-initial-state="0"></div>
-          </div>
-          <div class="nav__cta"><a data-w-id="80bb98e2-9c22-bed1-5063-efd275250aaa" href="request-a-quote.html"
-              class="cta-main w-inline-block">
-              <div class="btn-cover-small"></div>
-              <div class="nav__cta-text">get a quote</div>
-            </a></div>
-        </div>
-      </div>
-    </nav>
     <header class="section">
       <div class="container is--page-benefits">
         <div class="hero">
@@ -293,6 +166,8 @@
         </div>
       </div>
     </header>
+
+
     <section class="section">
       <div class="container">
         <div class="benefits">
@@ -325,7 +200,8 @@
                 value.<br /></p>
             </div>
           </div>
-          <div class="benefits__right"><img
+          <div class="benefits__right">
+            <img
               src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca61db62eb5fa__Entry-of-a-modern-house.jpg"
               loading="lazy"
               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(3deg, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(3deg, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(3deg, 0);transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(3deg, 0)"
@@ -333,10 +209,13 @@
               srcset="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca61db62eb5fa__Entry-of-a-modern-house-p-500.jpeg 500w, https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca61db62eb5fa__Entry-of-a-modern-house.jpg 792w"
               sizes="(max-width: 479px) 95vw, (max-width: 767px) 94vw, 46vw"
               alt="Entry of a modern house. Main eyecatcher is the wooden front door and the stairway with levitating steps and cords on the left side."
-              class="benifts__img" /></div>
+              class="benifts__img" />
+          </div>
         </div>
       </div>
     </section>
+
+
     <section class="section">
       <div class="container">
         <div class="content is--content">
