Skills and projects page added

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               adipisci saepe! Non, ullam magnam.
             </p>
             <br />
-              <a data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea0a3" href="#" class="cta-main w-inline-block">
+              <a data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea0a3" href="#footer" target="_blank" class="cta-main w-inline-block">
               <div
                 style="-webkit-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                 class="btn-cover-small"></div>
@@ -237,7 +237,6 @@
           </div>
         </div>
       </div>
-
       <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="#" class="outlined-cta projects w-inline-block">
         <div class="btn-cover-outlined"></div>
         <div class="outlined-cta-text">View Projects</div>
@@ -246,7 +245,7 @@
 
 
     <!--!  Footer  -->
-    <footer class="section is--footer">
+    <footer class="section is--footer" id="footer">
       <div class="container is--footer">
         <div class="footer">
           <div class="footer-left">
