--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
         <div class="nav">
           <div class="nav__logo">
             <a href="index.html" aria-current="page" class="logo-link w-inline-block w--current">
-              <div class="nav__logo-svg w-embed">
-                <!-- <img id="Layer_1" src="assets/sk-aero-logo.png" alt="" /> -->
+              <div class="nav__logo-svg w-embed">    
                 <h2>Logo</h2>
               </div>
             </a>
@@ -164,7 +163,7 @@
       <div class="container is--cta">
         <div class="cta">
           <div data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea097" class="cta-left"><img
-              src="assets/images/index/renovations.jpeg" loading="lazy"
+              src="assets/profile.jpg" loading="lazy"
               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0);transform:translate3d(0, 0, 0) scale3d(1.3, 1.3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(4deg, 0)"
               sizes="(max-width: 479px) 95vw, (max-width: 767px) 94vw, 37vw"
               alt="Living room with decorative glass wall" class="cta-image" /></div>
