Modify some layouts

--- a/index.html
+++ b/index.html
@@ -97,10 +97,6 @@
                   </svg>
                 </a>
               </div>
-
-
-              
-
               <div class="div-hide">
                 <a href="#" class="fullpage__scoial-icon two">
                   <span class="iconify-inline social-icons" data-icon="bi:facebook"></span>
@@ -145,7 +141,8 @@
               data-animation-type="lottie"
               data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca686572eb591_menu.json"
               data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg"
-              data-default-duration="2.4791666666666665" data-duration="0" data-ix2-initial-state="0"></div>
+              data-default-duration="2.4791666666666665" data-duration="0" data-ix2-initial-state="0">
+            </div>
           </div>
         </div>
       </div>
@@ -197,8 +194,6 @@
               adipisci saepe! Non, ullam magnam.
             </p>
 
-            <div class="timeline_text">Fill out the contact form below and include detailed information about your
-              goals and vision of your project.<br /></div>
             <br />
             <a data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea0a3" href="#footer" target="_blank"
               class="cta-main w-inline-block">
@@ -232,25 +227,25 @@
 
         <div class="project-scroll">
           <div class="project-scroll-image">
-            <img src="assets/images/index/home-sample1.jpg" loading="lazy"
+            <img src="assets/code1.jpg" loading="lazy"
               sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw" alt="Kitchen an elegant one"
               class="project__img" />
           </div>
 
           <div class="project-scroll-image">
-            <img src="assets/images/index/sk-building.png" loading="lazy"
+            <img src="assets/code2.jpg" loading="lazy"
               sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw" alt="Beautiful sala or living room"
               class="project__img" />
           </div>
 
           <div class="project-scroll-image">
-            <img src="assets//images/index/home-sample2.jpg" loading="lazy"
+            <img src="assets/code3.jpg" loading="lazy"
               sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Luxury bathroom with black marble floor and white marble wall" class="project__img" />
           </div>
         </div>
       </div>
-      <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="#" class="outlined-cta projects w-inline-block">
+      <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="projects.html" class="outlined-cta projects w-inline-block">
         <div class="btn-cover-outlined"></div>
         <div class="outlined-cta-text">View Projects</div>
       </a>
@@ -265,10 +260,8 @@
             <div class="footer-col">
               <h2 class="footer-heading">Reach me</h2>
               <div class="footer-list">
-                <a href="#" class="footer__link-item mb">MAIN OFFICE: SPACES, World Plaza<br />
-                  Bldg. 5th ave. cor. 30th ST.
-                  <br />
-                  Bonifacio, Global City, Taguig City<br />
+                <a href="#" class="footer__link-item mb">lore8
+                  Lorem ipsum dolor sit amet.<br />
                 </a>
 
                 <a href="#" class="footer__link-item mb">BRANCH OFFICE: 4th floor, RNC Bldg, 2671 Hounduras Street,
