--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="fullpage__social">
             <div class="fullpage__social-wrapper">
               <div class="div-hide">
-                <a href="#" class="fullpage__scoial-icon one">
+                <a href="https://github.com/Drakkarrr" target="_blank" norefferer="true" class="fullpage__scoial-icon one">
                   <svg viewBox="0 0 128 128" class="social-icons">
                     <g fill="#ffffff">
                       <path fill-rule="evenodd" clip-rule="evenodd"
@@ -98,12 +98,12 @@
                 </a>
               </div>
               <div class="div-hide">
-                <a href="#" class="fullpage__scoial-icon two">
+                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" norefferer="true" class="fullpage__scoial-icon two">
                   <span class="iconify-inline social-icons" data-icon="bi:facebook"></span>
                 </a>
               </div>
               <div class="div-hide">
-                <a href="#" class="fullpage__scoial-icon three">
+                <a href="mailto:jrydev404@gmail.com" target="_blank" norefferer="true" class="fullpage__scoial-icon three">
                   <span class="iconify-inline social-icons" data-icon="bxl:gmail"></span>
                 </a>
               </div>
@@ -115,13 +115,13 @@
   </div>
 
   <!--!  Loader  -->
-  <!-- <div class="preloader">
+  <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div> -->
+  </div>
 
 
   <div style="opacity: 0" class="parent">
@@ -185,9 +185,7 @@
                 class="heading-colored s--2 name-title">Web developer
               </h2>
             </div>
-            <p class="main-p is--padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis minus
-              incidunt eius earum rerum harum pariatur? Ab aut placeat eligendi voluptate suscipit labore veniam esse,
-              adipisci saepe! Non, ullam magnam.
+            <p class="main-p is--padding">Hello world! I am Junrey Lañas, A 22 year old aspiring web developer student studying in La Salle University-Ozamiz City.
             </p>
             <p class="main-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis minus
               incidunt eius earum rerum harum pariatur? Ab aut placeat eligendi voluptate suscipit labore veniam esse,
