Update contents for landing

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
           <div class="fullpage__social">
             <div class="fullpage__social-wrapper">
               <div class="div-hide">
-                <a href="https://github.com/Drakkarrr" target="_blank" norefferer="true" class="fullpage__scoial-icon one">
+                <a href="https://github.com/Drakkarrr" target="_blank" norefferer="true"
+                  class="fullpage__scoial-icon one">
                   <svg viewBox="0 0 128 128" class="social-icons">
                     <g fill="#ffffff">
                       <path fill-rule="evenodd" clip-rule="evenodd"
@@ -98,12 +99,14 @@
                 </a>
               </div>
               <div class="div-hide">
-                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" norefferer="true" class="fullpage__scoial-icon two">
+                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" norefferer="true"
+                  class="fullpage__scoial-icon two">
                   <span class="iconify-inline social-icons" data-icon="bi:facebook"></span>
                 </a>
               </div>
               <div class="div-hide">
-                <a href="mailto:jrydev404@gmail.com" target="_blank" norefferer="true" class="fullpage__scoial-icon three">
+                <a href="mailto:jrydev404@gmail.com" target="_blank" norefferer="true"
+                  class="fullpage__scoial-icon three">
                   <span class="iconify-inline social-icons" data-icon="bxl:gmail"></span>
                 </a>
               </div>
@@ -123,7 +126,7 @@
       data-duration="0" data-ix2-initial-state="0"></div>
   </div>
 
-
+  
   <div style="opacity: 0" class="parent">
     <nav data-w-id="e2d619f0-3929-f548-7fec-fabd0163f174" class="navbar">
       <div class="container is--nav">
@@ -185,11 +188,12 @@
                 class="heading-colored s--2 name-title">Web developer
               </h2>
             </div>
-            <p class="main-p is--padding">Hello world! I am Junrey Lañas, A 22 year old aspiring web developer student studying in La Salle University-Ozamiz City.
+            <p class="main-p is--padding">I am Junrey Lañas an aspiring developer/software engineer and a BSIT student
+              from LaSalle University, I’ve always been passionate in coding & programming specially in web development
+              and been practicing my skill in for the past couple of years now using modern and powerful technologies.
             </p>
-            <p class="main-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis minus
-              incidunt eius earum rerum harum pariatur? Ab aut placeat eligendi voluptate suscipit labore veniam esse,
-              adipisci saepe! Non, ullam magnam.
+            <p class="main-p">I help individuals to expand the scope and grow their business networks to provide more
+              sales to their business through delivering a high quality websites with clean ui & elegant feels.
             </p>
 
             <br />
@@ -225,25 +229,23 @@
 
         <div class="project-scroll">
           <div class="project-scroll-image">
-            <img src="assets/code1.jpg" loading="lazy"
-              sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw" alt="Kitchen an elegant one"
-              class="project__img" />
+            <img src="assets/code1.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+              alt="Kitchen an elegant one" class="project__img" />
           </div>
 
           <div class="project-scroll-image">
-            <img src="assets/code2.jpg" loading="lazy"
-              sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw" alt="Beautiful sala or living room"
-              class="project__img" />
+            <img src="assets/code2.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+              alt="Beautiful sala or living room" class="project__img" />
           </div>
 
           <div class="project-scroll-image">
-            <img src="assets/code3.jpg" loading="lazy"
-              sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+            <img src="assets/code3.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Luxury bathroom with black marble floor and white marble wall" class="project__img" />
           </div>
         </div>
       </div>
-      <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="projects.html" class="outlined-cta projects w-inline-block">
+      <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="projects.html"
+        class="outlined-cta projects w-inline-block">
         <div class="btn-cover-outlined"></div>
         <div class="outlined-cta-text">View Projects</div>
       </a>
