--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <title>IamJurey</title>
 
   <!--!  Description  -->
-  <meta content="SK-Aero builders" property="og:title" />
-  <meta content="SK-Aero builders" property="twitter:title" />
+  <meta content="IamJunrey" property="og:title" />
+  <meta content="IamJunrey" property="twitter:title" />
+  <meta content="Wazzup mananap yow yow break it down yow!" name="description" />
   <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
+  
   <meta <!--! Styles -->
   <link rel="stylesheet" href="styles/index/primary.css" type="text/css" />
   <link rel="stylesheet" href="styles/index/secondary.css" type="text/css" />
@@ -83,6 +85,7 @@
         <div class="fullpage__right">
           <div class="fullpage__social">
             <div class="fullpage__social-wrapper">
+
               <div class="div-hide">
                 <a href="https://github.com/Drakkarrr" target="_blank" norefferer="true"
                   class="fullpage__scoial-icon one">
@@ -98,6 +101,7 @@
                   </svg>
                 </a>
               </div>
+
               <div class="div-hide">
                 <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" norefferer="true"
                   class="fullpage__scoial-icon two">
@@ -106,9 +110,12 @@
               </div>
 
               <div class="div-hide">
-                <a href="mailto:jrydev404@gmail.com" target="_blank" norefferer="true"
-                  class="fullpage__scoial-icon three">
-                  <span class="iconify-inline social-icons" data-icon="bxl:gmail"></span>
+                <a class="fullpage__scoial-icon one" href="#" target="_blank" rel="noopener noreferrer">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="social-icons" aria-hidden="true" role="img"
+                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20">
+                    <path fill="currentColor"
+                      d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4zM7.65 13.979H5.706V7.723H7.65v6.256zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973zm8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699v3.699z" />
+                  </svg>
                 </a>
               </div>
             </div>
@@ -119,13 +126,13 @@
   </div>
 
   <!--!  Loader  -->
-  <!-- <div class="preloader">
+  <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div> -->
+  </div>
 
 
   <div style="opacity: 0" class="parent">
@@ -163,7 +170,6 @@
                   <h1>Hello World!</h1>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -301,7 +307,8 @@
                     </g>
                   </svg>
                 </a>
-                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank"
+                  rel="noopener noreferrer">
                   <svg xmlns="http://www.w3.org/2000/svg" class="social-icons" aria-hidden="true" role="img"
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
                     <path fill="currentColor"
