--- a/skills.html
+++ b/skills.html
@@ -1,22 +1,21 @@
-<!DOCTYPE html><!-- This site was created in Webflow. http://www.webflow.com -->
-<!-- Last Published: Fri Apr 15 2022 13:23:49 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="www.apextransformations.ca" data-wf-page="61fb6d3ce15a910f72f284e2"
-  data-wf-site="61ec1a21c49ca64c3e2eb550">
+<!DOCTYPE html>
+<html data-wf-domain="www.IamJunrey.me" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
+  data-wf-page="61fb74a44e43de538d68bcbe" data-wf-site="61ec1a21c49ca64c3e2eb550">
 
 <head>
   <meta charset="utf-8" />
-  <title>How it works - Apex Transformations</title>
+  <title>Skills - IamJunrey</title>
+  
   <meta
     content="We will provide you with a comprehensive project walkthrough. You will receive our warranty program certificate."
     name="description" />
+
   <meta content="How it works - Apex Transformations" property="og:title" />
   <meta
     content="We will provide you with a comprehensive project walkthrough. You will receive our warranty program certificate."
     property="og:description" />
   <meta content="How it works - Apex Transformations" property="twitter:title" />
-  <meta
-    content="We will provide you with a comprehensive project walkthrough. You will receive our warranty program certificate."
-    property="twitter:description" />
+  
   <meta property="og:type" content="website" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -144,8 +143,8 @@
     </div>
   </div>
 
-  <!--!  Navigation Bar  -->
-  <div class="fullpage-menu">
+   <!--!  Navigation Bar  -->
+   <div class="fullpage-menu">
     <div class="fullpage__wrapper">
       <div class="container is--fullpage">
         <div class="fullpage__left">
@@ -169,16 +168,38 @@
         <div class="fullpage__right">
           <div class="fullpage__social">
             <div class="fullpage__social-wrapper">
+
               <div class="div-hide">
-                <a href="#" class="fullpage__scoial-icon one">Github</a>
+                <a href="https://github.com/Drakkarrr" target="_blank" norefferer="true"
+                  class="fullpage__scoial-icon one">
+                  <svg viewBox="0 0 128 128" class="social-icons">
+                    <g fill="#ffffff">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z">
+                      </path>
+                      <path
+                        d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0">
+                      </path>
+                    </g>
+                  </svg>
+                </a>
               </div>
 
               <div class="div-hide">
-                <a href="#" class="fullpage__scoial-icon two">Facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" norefferer="true"
+                  class="fullpage__scoial-icon two">
+                  <span class="iconify-inline social-icons" data-icon="bi:facebook"></span>
+                </a>
               </div>
 
               <div class="div-hide">
-                <a href="#" class="fullpage__scoial-icon three">Instagram</a>
+                <a class="fullpage__scoial-icon one" href="#" target="_blank" rel="noopener noreferrer">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="social-icons" aria-hidden="true" role="img"
+                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20">
+                    <path fill="currentColor"
+                      d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4zM7.65 13.979H5.706V7.723H7.65v6.256zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973zm8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699v3.699z" />
+                  </svg>
+                </a>
               </div>
             </div>
           </div>
@@ -186,6 +207,8 @@
       </div>
     </div>
   </div>
+
+
 
   <div style="opacity:0" class="parent">
     <nav data-w-id="e2d619f0-3929-f548-7fec-fabd0163f174" class="navbar">
