Changed skills page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
   <!--!  Description  -->
   <meta content="IamJunrey" property="og:title" />
-  <meta content="IamJunrey" property="twitter:title" />
-  <meta content="Wazzup mananap yow yow break it down yow!" name="description" />
   <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
   
-  <meta <!--! Styles -->
+   <!--! Styles -->
   <link rel="stylesheet" href="styles/index/primary.css" type="text/css" />
   <link rel="stylesheet" href="styles/index/secondary.css" type="text/css" />
   <link rel="stylesheet" href="styles/index/media.css" type="text/css" />
@@ -85,7 +83,6 @@
         <div class="fullpage__right">
           <div class="fullpage__social">
             <div class="fullpage__social-wrapper">
-
               <div class="div-hide">
                 <a href="https://github.com/Drakkarrr" target="_blank" norefferer="true"
                   class="fullpage__scoial-icon one">
