Skills contents changed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="www.IamJunrey.me" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
+<html data-wf-domain="www.jrydev.codes" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
   data-wf-page="61fb74a44e43de538d68bcbe" data-wf-site="61ec1a21c49ca64c3e2eb550">
 
 <head>
@@ -10,7 +10,7 @@
   <title>IamJurey</title>
 
   <!--!  Description  -->
-  <meta content="IamJunrey" property="og:title" />
+  <meta content="www.jrydev.codes" property="og:title" />
   <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
   
    <!--! Styles -->
