--- a/index.html
+++ b/index.html
@@ -13,51 +13,16 @@
   <meta content="www.jrydev.codes" property="og:title" />
   <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
   
-   <!--! Styles -->
-  <link rel="stylesheet" href="styles/index/primary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/index/secondary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/index/media.css" type="text/css" />
+  <!--! Styles -->
+  <link rel="stylesheet" href="styles/primary.css" type="text/css" />
+  <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
+  <link rel="stylesheet" href="styles/media.css" type="text/css" />
 
   <!--!  Favicon  -->
-  <link href="assets/sk-aero-logo.png" rel="shortcut icon" type="image/x-icon" />
-
-  <!--!  Assets  -->
-  <meta
-    content="https://uploads-ssl.webflow.com/616c480f8e454e3df261a7ab/61db76cf6224935fa30ce79d_Interior%20Design.jpeg"
-    property="og:image" />
-  <meta
-    content="https://uploads-ssl.webflow.com/616c480f8e454e3df261a7ab/61db76cf6224935fa30ce79d_Interior%20Design.jpeg"
-    property="twitter:image" />
+  <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
-  <!--!  Global navlinks styles  -->
-  <div class="global">
-    <div class="html w-embed">
-      <style>
-        @media only screen and (min-width: 1920px) {
-          body {
-            font-size: 19.2px;
-          }
-        }
-
-        @media only screen and (min-width: 992px) and (max-width: 1200px) {
-          p {
-            font-size: 14.4px;
-          }
-        }
-
-        a {
-          color: inherit;
-        }
-
-        .cursor-wrapper {
-          pointer-events: none;
-        }
-      </style>
-    </div>
-  </div>
-
   <!--!  Navigation Bar  -->
   <div class="fullpage-menu">
     <div class="fullpage__wrapper">
@@ -139,7 +104,7 @@
           <div class="nav__logo">
             <a href="index.html" aria-current="page" class="logo-link w-inline-block w--current">
               <div class="nav__logo-svg w-embed">
-                <img src="assets/logo-new-750.png" alt="IamJunrey Logo">
+                <img src="assets/jrydev-logo.png" alt="IamJunrey Logo">
               </div>
             </a>
           </div>
